Implemented anti-aliasing

--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -28,12 +28,12 @@ all: raytracer
 
 # Builds the executable
 # Important: Change the first dependency to the build you are using
-raytracer: obj/buildChess.o \
+raytracer: obj/buildMVP.o \
 	obj/Parallel.o obj/Perspective.o \
 	obj/Geometry.o obj/Plane.o obj/Sphere.o obj/Triangle.o \
 	obj/Light.o obj/Ambient.o obj/Directional.o obj/Point.o obj/Spotlight.o \
 	obj/Cosine.o \
-	obj/Sampler.o obj/Simple.o \
+	obj/Sampler.o obj/Simple.o obj/Quad.o \
 	obj/Image.o obj/Point3D.o obj/Ray.o	obj/RGBColor.o obj/ShadeInfo.o \
 	obj/Vector3D.o \
 	obj/ViewPlane.o obj/World.o \
@@ -156,6 +156,11 @@ obj/Sampler.o: samplers/Sampler.cpp samplers/Sampler.hpp obj
 obj/Simple.o: samplers/Simple.cpp samplers/Simple.hpp cameras/Camera.hpp \
 	samplers/Sampler.hpp utilities/Ray.hpp obj
 	$(CXX) -c $(CXXFLAGS) -o $@ samplers/Simple.cpp
+
+# Add any additional samplers you make here
+obj/Quad.o: samplers/Quad.cpp samplers/Quad.hpp cameras/Camera.hpp \
+	samplers/Sampler.hpp utilities/Ray.hpp obj
+	$(CXX) -c $(CXXFLAGS) -o $@ samplers/Quad.cpp
 
 ################################################################################
 # Utilities
