--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -232,8 +232,10 @@ clean:
 # Formats code and suggestions improvements according to cpplint
 clean-code:
 	clang-format --style=google -i **/*.*pp
+	clang-format --style=google -i raytracer.cpp
 	-cpplint **/*.cpp
 	-cpplint **/*.hpp
+	-cpplint raytracer.cpp
 
 # Creates obj folder for all object files
 obj:
