added comment on how to compile this on mac

--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -17,6 +17,9 @@
 # not responsible for any issues it may cause
 ################################################################################
 
+# Note: On macs, g++ point to clang still, which does not have Open MP. To
+# solve this you can install gcc with homebrew and specify the version here
+# 	i.e. g++-9
 CXX = g++
 CXXFLAGS = -g -std=c++1z -Wall -Wextra -pedantic -O3
 
