--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -31,7 +31,7 @@ all: raytracer
 
 # Builds the executable
 # Important: Change the first dependency to the build you are using
-raytracer: obj/buildChapter14.o \
+raytracer: obj/buildMVP.o \
 	obj/Lambertian.o obj/PerfectSpecular.o obj/GlossySpecular.o \
 	obj/Parallel.o obj/Perspective.o \
 	obj/Geometry.o obj/Plane.o obj/Sphere.o obj/Triangle.o \
