--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -31,7 +31,7 @@ all: raytracer
 
 # Builds the executable
 # Important: Change the first dependency to the build you are using
-raytracer: obj/buildChess.o \
+raytracer: obj/buildChessHigh.o \
 	obj/Lambertian.o obj/PerfectSpecular.o obj/GlossySpecular.o \
 	obj/Parallel.o obj/Perspective.o \
 	obj/Geometry.o obj/Plane.o obj/Sphere.o obj/Triangle.o \
@@ -90,11 +90,19 @@ obj/buildAntiAlias.o: build/buildAntiAlias.cpp cameras/Perspective.hpp \
 	tracers/Whitted.hpp utilities/Constants.hpp	world/World.hpp obj
 	$(CXX) -c $(CXXFLAGS) -o $@ build/buildAntiAlias.cpp
 
-obj/buildChess.o: build/buildChess.cpp cameras/Perspective.hpp \
-	geometry/Triangle.hpp lights/Ambient.hpp lights/Point.hpp \
-	materials/Matte.hpp	samplers/JitterGaussian.hpp	tracers/Whitted.hpp \
-	utilities/ChessPiece.hpp utilities/Constants.hpp world/World.hpp obj
-	$(CXX) -c $(CXXFLAGS) -o $@ build/buildChess.cpp
+obj/buildChessHigh.o: build/buildChessHigh.cpp build/buildChess.cpp \
+	cameras/Perspective.hpp geometry/Triangle.hpp lights/Ambient.hpp \
+	lights/Point.hpp materials/Matte.hpp samplers/JitterGaussian.hpp \
+	tracers/Whitted.hpp utilities/ChessPiece.hpp utilities/Constants.hpp \
+	world/World.hpp obj
+	$(CXX) -c $(CXXFLAGS) -o $@ build/buildChessHigh.cpp
+
+obj/buildChessLow.o: build/buildChessLow.cpp build/buildChess.cpp \
+	cameras/Perspective.hpp	geometry/Triangle.hpp lights/Ambient.hpp \
+	lights/Point.hpp materials/Matte.hpp samplers/JitterGaussian.hpp \
+	tracers/Whitted.hpp	utilities/ChessPiece.hpp utilities/Constants.hpp \
+	world/World.hpp obj
+	$(CXX) -c $(CXXFLAGS) -o $@ build/buildChessLow.cpp
 
 obj/buildLightTest.o: build/buildLightTest.cpp cameras/Perspective.hpp \
 	geometry/Plane.hpp geometry/Sphere.hpp geometry/Triangle.hpp \
