--- a/raytracer/CPPLINT.cfg
+++ b/raytracer/CPPLINT.cfg
@@ -1,3 +1,3 @@
-filter=-legal/copyright,-runtime/references
+filter=-legal/copyright,-runtime/references,-build/include,-runtime/explicit
 headers=hpp
 
